Update and rename README.md to README.adoc

--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,7 @@
-# bootiful-spring
+= Spring
+:toc:
 
+== Bootiful
 
 - [Bootiful Spring - GraphQL and Kotlin](https://www.youtube.com/watch?v=t9He4vHZC24&t=109s)
 - [Bootiful]()
