--- a/spring-projects/README.adoc
+++ b/spring-projects/README.adoc
@@ -2,3 +2,9 @@
 :toc:
 
 > Self-serving POC for Spring projects. (Keep it as DDD as possible)
+
+
+
+== 1. https://learning.oreilly.com/library/view/spring-50-projects/9781788390415/[Build Travel site using Spring]
+  1. Frontend - Thymeleaf and Angular
+  2. AuthN and AutnZ - Spring Security, OAuth and LDAP
